# siwe-auth-django

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  miscellaneous.yml  question_help.yml
.github/workflows/: pypi_release.yml
src/siwe_auth/: admin.py  apps.py  backends.py  conf.py  constants.py  groups.py  models.py  urls.py  utils.py  views.py
src/siwe_auth/migrations/: 0001_initial.py
